2023-10-15T08:10:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6522895833 # 1992
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-15
* notice: last 14d: unq all: 4 25
* notice: prev accum: outdated-unq outdated-all / unq all: 754 1393 / 769 1418
* notice: next accum: outdated-unq outdated-all / unq all: 754 1393 / 770 1419
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-01 2023-10-15]

2023-10-15T00:46:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6520933259 # 1991
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-15
* notice: last 14d: unq all: 4 25
* notice: prev accum: outdated-unq outdated-all / unq all: 753 1391 / 769 1417
* notice: next accum: outdated-unq outdated-all / unq all: 754 1393 / 769 1418
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-09-30] / [2023-10-14]

2023-10-14T08:10:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6516500021 # 1989
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-14
* notice: last 14d: unq all: 4 25
* notice: prev accum: outdated-unq outdated-all / unq all: 753 1391 / 768 1416
* notice: next accum: outdated-unq outdated-all / unq all: 753 1391 / 769 1417
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-30 2023-10-14]

2023-10-14T00:41:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6514445098 # 1988