@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-15T08:10:55Z",
-  "count_outdated" : 1393,
-  "uniques_outdated" : 754,
-  "count" : 1419,
+  "timestamp" : "2023-10-16T00:43:53Z",
+  "count_outdated" : 1395,
+  "uniques_outdated" : 755,
+  "count" : 1420,
   "uniques" : 770,
   "clones" : [
-    {
-      "timestamp": "2023-10-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-02T00:00:00Z",
       "count": 2,
@@ -115,9 +106,9 @@
     },
     {
       "timestamp": "2023-10-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
