@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2023-10-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-10-02T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2023-10-15T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
