@@ -1,3 +1,12 @@
+2023-10-16T00:43:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6527544821 # 1994
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
+* notice: last 14d: unq all: 4 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 754 1393 / 770 1419
+* notice: next accum: outdated-unq outdated-all / unq all: 755 1395 / 770 1420
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-10-01] / [2023-10-15]
+
 2023-10-15T08:10:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6522895833 # 1992
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-15
